# ai-investor-poc

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: get_data  train_model
src/: main.py
src/data/: __init__.py
src/ml/: fetch_data_alpaca.py  fetch_data_yfinance.py  train_model.py
src/trading/: live_data_feed.py  ml_strategy.py
